--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,111 @@
-streamlit
-pandas
-plotly
-yfinance
-fpdf
-numpy
-feedparser
-openpyxl
-gspread
-oauth2client
-google-auth
-toml
-ib_insync
+absl-py==2.3.1
+altair==6.0.0
+astunparse==1.6.3
+attrs==25.4.0
+beautifulsoup4==4.14.3
+blinker==1.9.0
+cachetools==6.2.4
+certifi==2025.1.31
+cffi==2.0.0
+charset-normalizer==3.4.1
+click==8.3.1
+colorama==0.4.6
+comtypes==1.4.10
+contourpy==1.3.1
+curl_cffi==0.13.0
+cycler==0.12.1
+eventkit==1.0.3
+extra-streamlit-components==0.1.81
+feedparser==6.0.12
+flatbuffers==25.12.19
+fonttools==4.57.0
+fpdf==1.7.2
+frozendict==2.4.7
+gast==0.7.0
+gitdb==4.0.12
+GitPython==3.1.46
+google-auth==2.47.0
+google-auth-oauthlib==1.2.4
+google-pasta==0.2.0
+grpcio==1.76.0
+gspread==6.2.1
+h5py==3.15.1
+httplib2==0.31.1
+ib-insync==0.9.86
+idna==3.10
+Jinja2==3.1.6
+joblib==1.5.3
+jsonschema==4.26.0
+jsonschema-specifications==2025.9.1
+keras==3.13.1
+kiwisolver==1.4.8
+libclang==18.1.1
+Markdown==3.10
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+matplotlib==3.10.1
+mdurl==0.1.2
+ml_dtypes==0.5.4
+multitasking==0.0.12
+namex==0.1.0
+narwhals==2.15.0
+nest-asyncio==1.6.0
+numpy==2.2.4
+oauth2client==4.1.3
+oauthlib==3.3.1
+opt_einsum==3.4.0
+optree==0.18.0
+packaging==24.2
+pandas==2.3.3
+patsy==1.0.2
+peewee==3.19.0
+pillow==11.2.1
+platformdirs==4.5.1
+plotly==6.5.2
+protobuf==6.33.4
+pyarrow==22.0.0
+pyasn1==0.6.2
+pyasn1_modules==0.4.2
+pycparser==2.23
+pydeck==0.9.1
+Pygments==2.19.2
+pyparsing==3.2.3
+pypiwin32==223
+python-dateutil==2.9.0.post0
+pyttsx3==2.90
+pytz==2025.2
+pywin32==310; sys_platform == 'win32'
+referencing==0.37.0
+requests==2.31.0
+requests-oauthlib==2.0.0
+rich==14.2.0
+rpds-py==0.30.0
+rsa==4.9.1
+schedule==1.2.2
+scikit-learn==1.8.0
+scipy==1.16.3
+setuptools==80.9.0
+sgmllib3k==1.0.0
+six==1.17.0
+smmap==5.0.2
+soupsieve==2.8.1
+statsmodels==0.14.6
+streamlit==1.53.0
+tenacity==9.1.2
+tensorboard==2.20.0
+tensorboard-data-server==0.7.2
+tensorflow==2.20.0
+termcolor==3.3.0
+threadpoolctl==3.6.0
+tk==0.1.0
+toml==0.10.2
+tornado==6.5.4
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.3.0
+watchdog==6.0.0
+websockets==16.0
+Werkzeug==3.1.5
+wheel==0.45.1
+wrapt==2.0.1
+yfinance==1.0
